--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ aws:
     region: ${AWS_COGNITO_REGION}
     clientId: ${AWS_COGNITO_CLIENT_ID}
     clientSecret: ${AWS_COGNITO_CLIENT_SECRET}
+    domain: ${AWS_COGNITO_DOMAIN}
+    redirectUri: ${AWS_COGNITO_REDIRECT_URI}
 
 sample:
   jwe-key-value: classpath:key.priv
